namespace Keetzap.ZeldaMaker
{
    public class StringsData
    {
        public const string GAMEPLAY = "GamePlay";
        public const string UI = "UI";
        public const string PAUSE = "Pause";
        public const string LOCOMOTION = "Locomotion";
        public const string CHASE = "Chase";
        public const string PATROL = "Patrol";
        public const string IDLE = "Idle";
        public const string SWORD = "Sword";
        public const string ATTACK = "Attack";
        public const string SHIELD = "Shield";
        public const string WOUNDED = "Wounded";
        public const string DEAD = "Dead";
        public const string PICK = "Pick";
        public const string PUSH = "Push";
        public const string INTERACT = "Interact";
        public const string BOMB = "Bomb";
        public const string KEY = "Key";
        public const string TRAP = "Trap";
        public const string HEART = "Heart";
        public const string PICKUP = "PickableDrop";
        public const string DROPPER = "Dropper";
        public const string PLAYER = "Player";
        public const string ENEMY = "Enemy";
        public const string PROP = "InteractableProp";
        public const string RESPAWN_AREA = "RespawnArea";
    }
}